@@ -187,4 +187,4 @@
 
 - consider adding multifactorial.  See MPU::GMP.
 
-- multicall in forsetproduct, forfactored, forsquarefree.  See Set::Product.
+- multicall in forpart, forperm, and their XS aliases.
